--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
                 <div class="count-box">
                   <i class="bi bi-journal-richtext"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="846" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="887" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>Students</p>
                 </div>
@@ -191,7 +191,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                 <div class="count-box">
                   <i class="bi bi-headset"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="501" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="535" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>HomeworkHub Tutors</p>
                 </div>
@@ -200,7 +200,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                 <div class="count-box">
                   <i class="bi bi-people"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="6512" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="7096" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>Hours Tutored</p>
                 </div>
@@ -440,8 +440,8 @@
                 <h1 id="intro">Ho Ho HomeworkHub</h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
                   <img class="rounded-3 img-fluid" src="assets/img/gallery/grandriverhospitaldonation.jpg">
-                  <p class="w-75 mt-2" style="font-style: normal;">Thanks to the help of our community partners and <b><a
-                        href="https://www.risingyouth.ca/">Rising
+                  <p class="w-75 mt-2" style="font-style: normal;">Thanks to the help of our community partners and
+                    <b><a href="https://www.risingyouth.ca/">Rising
                         Youth</a></b>,
                     HomeworkHub was able to donate over $2000 worth of Holiday Gifts to students in our community this
                     Holiday Season for our inaugural "Ho Ho HomeworkHub" Holiday Fundraiser!
@@ -481,6 +481,12 @@
                     please visit Compass Tutoring for more information and stay tuned for future intro sessions!
                   </p>
                 </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="testimonial-item d-flex flex-column justify-content-center align-items-center">
+                <h1 id="intro">Compass Codes</h1>
+                <img class="rounded-3 w-25" src="assets/img/other/compass_codes.png">
               </div>
             </div>
 
