--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -454,10 +454,17 @@
             </div>
         </div>
     </footer><!-- End Footer -->
+    <div id="google_translate_element"></div>
 
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
             class="bi bi-arrow-up-short"></i></a>
     <div id="preloader"></div>
+
+
+    <script type="text/javascript" src="./assets/js/translate.js"></script>
+
+    <script type="text/javascript"
+        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/aos/aos.js"></script>
