compass tutoring codes

--- a/index.html
+++ b/index.html
@@ -486,7 +486,17 @@
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column justify-content-center align-items-center">
                 <h1 id="intro">Compass Codes</h1>
-                <img class="rounded-3 w-25" src="assets/img/other/compass_codes.png">
+                <div class="d-flex align-items-center w-75">
+                  <img class="rounded-3 w-25" src="assets/img/other/compass_codes.png">
+                  <p class="ms-4 non-ti">Compass Codes is a 2-month long, FREE introductory coding program hosted in
+                    partnership with
+                    Compass
+                    Tutoring. This program, brought to you by our very best computer science tutors Charles Zhang and
+                    Feng
+                    Zhang, will host fun, engaging, and hands-on lessons to teach students grade 5 to 10 the basics of
+                    computer science, web-development, and user-friendly and dynamic web-applications.
+                  </p>
+                </div>
               </div>
             </div>
 
