--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
               <li><a
                   href="https://docs.google.com/forms/d/e/1FAIpQLSecAWrA9XmRFuKeeElm8SS5E09MsU5nLyrujhs0FRg2w1Glnw/viewform">Register</a>
               </li>
+              <li><a href="/refugee.html">Refugee Info</a>
+              </li>
             </ul>
           </li>
           <li><a href="#events">Events</a></li>
@@ -1253,6 +1255,7 @@
         <!-- End Contact Section -->
 
   </main><!-- End #main -->
+  <div id="google_translate_element"></div>
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
@@ -1330,7 +1333,6 @@
       </div>
     </div>
   </footer><!-- End Footer -->
-  <div id="google_translate_element"></div>
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
