--- a/refugee.html
+++ b/refugee.html
@@ -110,7 +110,7 @@
             <h2>We help our community</h2>
             <div class="text-center text-lg-start">
               <a href="#about" class="btn-get-started scrollto">Learn More</a>
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true"
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSecAWrA9XmRFuKeeElm8SS5E09MsU5nLyrujhs0FRg2w1Glnw/viewform"
                 class="btn-get-started scrollto">Become a Volunteer</a>
             </div>
           </div>
