--- a/refugee.html
+++ b/refugee.html
@@ -164,6 +164,12 @@
                 ELS tutors).
 
               </p>
+              <button
+                style="background-color: #EACC0D; outline: none; border: none; border-radius: 10px; padding: 10px;"><a
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true"
+                  class="text-white">Register
+                  Now as a
+                  Student</a></button>
 
             </div>
           </div>
