--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -55,6 +55,7 @@
                             <li><a
                                     href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true">Register</a>
                             </li>
+                            <li><a href="/refugee.html">Refugee Info</a>
                         </ul>
                     <li><a href="index.html#volunteers">Volunteers</a></li>
                     <li><a href="index.html#intro">Events</a></li>
