--- a/refugee.html
+++ b/refugee.html
@@ -55,6 +55,7 @@
               <li><a
                   href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true">Register</a>
               </li>
+              <li><a href="#">Refugee Info</a>
             </ul>
           </li>
           <li class="dropdown"><a href="index.html#volunteers"><span>Volunteers</span> <i
@@ -63,22 +64,21 @@
               <li><a
                   href="https://docs.google.com/forms/d/e/1FAIpQLSecAWrA9XmRFuKeeElm8SS5E09MsU5nLyrujhs0FRg2w1Glnw/viewform">Register</a>
               </li>
-              <li><a href="#">Refugee Info</a>
-              </li>
-            </ul>
           </li>
-          <li><a href="index.html#events">Events</a></li>
-          <li class="dropdown"><a href="index.html#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="index.html#team">Our Team</a></li>
-              <li><a href="index.html#donors">Our Partners</a></li>
-              <li><a href="index.html#news">Our Features</a></li>
-            </ul>
-          <li><a href="index.html#real-testimonials">Testimonials</a></li>
-          <li><a href="index.html#donations">Donate</a></li>
+        </ul>
+        </li>
+        <li><a href="index.html#events">Events</a></li>
+        <li class="dropdown"><a href="index.html#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li><a href="index.html#team">Our Team</a></li>
+            <li><a href="index.html#donors">Our Partners</a></li>
+            <li><a href="index.html#news">Our Features</a></li>
+          </ul>
+        <li><a href="index.html#real-testimonials">Testimonials</a></li>
+        <li><a href="index.html#donations">Donate</a></li>
 
-          <!-- <li><div id="goofgle_translate_element"></div></li -->
-          <!-- <li class="dropdown"><a href="#"><span>Translate</span><i class="bi bi-chevron-down"></i></a>
+        <!-- <li><div id="goofgle_translate_element"></div></li -->
+        <!-- <li class="dropdown"><a href="#"><span>Translate</span><i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="index.html">French</a></li>
             </ul>
@@ -149,9 +149,7 @@
           <!-- <div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center align-items-stretch" data-aos="fade-right">
             <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div> -->
-          <div class="d-flex align-items-center flex-wrap" style="margin-left: 100px;">
-
-
+          <div class="d-flex flex-row align-items-center flex-wrap" style="margin-left: 100px;">
             <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column py-5 px-lg-5" data-aos="fade-left">
               <h3>Dear refugees and people currently in need, </h3>
               <p>We understand that change is not easy. Entering a new country, surrounded by unknown languages, people,
@@ -172,6 +170,8 @@
                   Student</a></button>
 
             </div>
+            <img data-aos="fade-down" src="./assets/img/other/refugee_img_2.jpeg" alt="refugee image 2" srcset=""
+              class="img-fluid rounded-3" width="400">
           </div>
         </div>
 
