button front page

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
               <a href="#about" class="btn-get-started scrollto">Learn More</a>
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true"
                 class="btn-get-started scrollto">Become a Student</a>
+              <a href="refugee.html" class="btn-get-started scrollto">Refugee Info</a>
             </div>
           </div>
         </div>
