--- a/index.html
+++ b/index.html
@@ -1026,7 +1026,7 @@
                   <div class="pic"><img src="assets/img/team/andrew.JPG" class="img-fluid" alt=""></div>
                   <div class="member-info">
                     <h4>Andrew Yang</h4>
-                    <span>Website Manager</span>
+                    <span>Tech Director</span>
                     <!--  <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
@@ -1063,7 +1063,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+              <div class="col-lg-3 col-md-6 mt-3">
                 <div class="member" data-aos="zoom-in" data-aos-delay="400">
                   <div class="pic"><img src="assets/img/team/angela.jpeg" class="img-fluid" alt="">
                   </div>
@@ -1078,12 +1078,13 @@
                 </div>
               </div>
 
+
               <div class="col-lg-3 col-md-6 mt-3">
                 <div class="member" data-aos="zoom-in" data-aos-delay="100">
-                  <div class="pic"><img src="assets/img/team/adrian.jpg" class="img-fluid" alt=""></div>
+                  <div class="pic"><img src="assets/img/team/Gurman.jpeg" class="img-fluid" alt=""></div>
                   <div class="member-info">
-                    <h4>Adrian Golab</h4>
-                    <span>Tutors and Volunteers Assistant</span>
+                    <h4>Gurman Sahota</h4>
+                    <span>Volunteers and Interview Team Member </span>
                     <!--  <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
@@ -1092,6 +1093,20 @@
                 </div>
               </div>
 
+              <div class="col-lg-3 col-md-6 mt-3">
+                <div class="member" data-aos="zoom-in" data-aos-delay="100">
+                  <div class="pic"><img src="assets/img/team/Anne.JPG" width="260" class="img-fluid rounded" alt="">
+                  </div>
+                  <div class="member-info">
+                    <h4>Anne Zhang</h4>
+                    <span>Pairing Team Member</span>
+                    <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+                  </div>
+                </div>
+              </div>
 
             </div>
 
