--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <h1>Welcome to <span>HomeworkHub!</span></h1>
             <h2>Let's learn and teach together!</h2>
             <div class="text-center text-lg-start">
-              <a href="#about" class="btn-get-started scrollto">Learn More</a>
+              <a href="https://forms.gle/D6hXpn68ztPmQZPH7" class="btn-get-started scrollto">Become a Tutor</a>
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true"
                 class="btn-get-started scrollto">Become a Student</a>
               <a href="refugee.html" class="btn-get-started scrollto">Refugee Info</a>
@@ -186,7 +186,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
                 <div class="count-box">
                   <i class="bi bi-journal-richtext"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="921" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="972" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>Students</p>
                 </div>
@@ -195,7 +195,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                 <div class="count-box">
                   <i class="bi bi-headset"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="555" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="579" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>HomeworkHub Tutors</p>
                 </div>
@@ -204,7 +204,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                 <div class="count-box">
                   <i class="bi bi-people"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="3316" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="3499" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>Hours Tutored</p>
                 </div>
