--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
             <h1>Welcome to <span>HomeworkHub!</span></h1>
             <h2>Let's learn and teach together!</h2>
             <div class="text-center text-lg-start">
-              <a href="https://forms.gle/D6hXpn68ztPmQZPH7" class="btn-get-started scrollto">Become a Tutor</a>
+              <a href="https://forms.gle/D6hXpn68ztPmQZPH7 m-2" class="btn-get-started scrollto">Become a Tutor</a>
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true"
                 class="btn-get-started scrollto">Become a Student</a>
-              <a href="refugee.html" class="btn-get-started scrollto">Refugee Info</a>
+              <a href="refugee.html" class="btn-get-started scrollto m-2">Refugee Info</a>
             </div>
           </div>
         </div>
@@ -186,7 +186,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
                 <div class="count-box">
                   <i class="bi bi-journal-richtext"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="980" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="1012" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>Students</p>
                 </div>
