--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <h1>Welcome to <span>HomeworkHub!</span></h1>
             <h2>Let's learn and teach together!</h2>
             <div class="text-center text-lg-start">
-              <a href="https://forms.gle/D6hXpn68ztPmQZPH7 m-2" class="btn-get-started scrollto">Become a Tutor</a>
+              <a href="https://forms.gle/D6hXpn68ztPmQZPH7" class="btn-get-started scrollto m-2">Become a Tutor</a>
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true"
                 class="btn-get-started scrollto">Become a Student</a>
               <a href="refugee.html" class="btn-get-started scrollto m-2">Refugee Info</a>
