Fixed spacing and picture size on team page

--- a/team.html
+++ b/team.html
@@ -201,7 +201,7 @@
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/tina.png" class="img-fluid" width='272' alt="">
+              <div class="pic"><img src="assets/img/team/tina.png" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Tahmina Faez</h4>
@@ -216,9 +216,9 @@
         </div>
         <div class="row" data-aos="fade-left">
 
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+          <div class="col-lg-3 col-md-6 mt-5 ">
             <div class="member" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="assets/img/team/leah.jpg" width='360' class="img-fluid" alt="">
+              <div class="pic"><img src="assets/img/team/leahR.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Leah Cai</h4>
@@ -231,7 +231,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+          <div class="col-lg-3 col-md-6 mt-5 ">
             <div class="member" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic"><img src="assets/img/team/me.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
@@ -245,7 +245,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+          <div class="col-lg-3 col-md-6 mt-5 ">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic"><img src="assets/img/team/andrew.JPG" class="img-fluid" alt=""></div>
               <div class="member-info">
@@ -259,7 +259,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-3">
+          <div class="col-lg-3 col-md-6 mt-5 ">
             <div class="member" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic"><img src="assets/img/team/fiona.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
@@ -273,7 +273,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-3">
+          <div class="col-lg-3 col-md-6 mt-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic"><img src="assets/img/team/mychau.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
@@ -287,9 +287,9 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-3">
+          <div class="col-lg-3 col-md-6 mt-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="assets/img/team/angela.jpeg" class="img-fluid" alt="">
+              <div class="pic"><img src="assets/img/team/angela.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Angela Zielke-Stray</h4>
@@ -303,9 +303,9 @@
           </div>
 
 
-          <div class="col-lg-3 col-md-6 mt-3">
+          <div class="col-lg-3 col-md-6 mt-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/Gurman.jpeg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/Gurman.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Gurman Sahota</h4>
                 <span>Volunteers and Interview Team Member </span>
@@ -317,9 +317,9 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-3">
+          <div class="col-lg-3 col-md-6 mt-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/Anne.JPG" width="260" class="img-fluid rounded" alt="">
+              <div class="pic"><img src="assets/img/team/Anne.JPG" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Anne Zhang</h4>
@@ -332,14 +332,38 @@
             </div>
           </div>
 
+          <!-- <div class="col-lg-3 col-md-6 mt-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="400">
+              <div class="pic"><img src="assets/img/team/Juliane Alves.jpeg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Julianne Alves</h4>
+                <span>Quality Assurance Team Member</span>
+                   <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> 
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+            <div class="member" data-aos="zoom-in" data-aos-delay="200">
+              <div class="pic"><img src="assets/img/team/Suneet Mahal.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Suneet Mahal</h4>
+                <span>Quality Assurance Team Member</span>
+                <  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> 
+              </div>
+            </div>
+          </div> -->
         </div>
 
       </div>
       <div class="row" data-aos="fade-left">
-
-
-
-
 
 
       </div>
