--- a/team.html
+++ b/team.html
@@ -213,12 +213,13 @@
               </div>
             </div>
           </div>
+
         </div>
         <div class="row" data-aos="fade-left">
 
           <div class="col-lg-3 col-md-6 mt-5 ">
             <div class="member" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="assets/img/team/leahR.jpg" class="img-fluid" alt="">
+              <div class="pic"><img src="assets/img/team/leah.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Leah Cai</h4>
@@ -331,39 +332,70 @@
               </div>
             </div>
           </div>
+        
+        </div>
 
-          <!-- <div class="col-lg-3 col-md-6 mt-5">
-            <div class="member" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="assets/img/team/Juliane Alves.jpeg" class="img-fluid" alt="">
-              </div>
+        <div class="row" data-aos="fade-left">
+
+          <div class="col-lg-3 col-md-6 mt-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic"><img src="assets/img/team/Juliane Alves.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Julianne Alves</h4>
-                <span>Quality Assurance Team Member</span>
-                   <div class="social">
+                <span>Quality Assurance team member</span>
+                <!--  <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> 
+                </div> -->
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+          <div class="col-lg-3 col-md-6 mt-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic"><img src="assets/img/team/Suneet Mahal.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Suneet Mahal</h4>
-                <span>Quality Assurance Team Member</span>
-                <  <div class="social">
+                <span>Quality Assurance team member</span>
+                <!--  <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> 
+                </div> -->
               </div>
             </div>
-          </div> -->
-        </div>
+          </div>
 
-      </div>
-      <div class="row" data-aos="fade-left">
+          <div class="col-lg-3 col-md-6 mt-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="300">
+              <div class="pic"><img src="assets/img/team/Grace Qiu.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Grace Qiu</h4>
+                <span>Quality Assurance team member</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-lg-3 col-md-6 mt-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic"><img src="assets/img/team/Devanga Dassnayake.JPG" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Devanga Dassnayake</h4>
+                <span>Pairing team member</span>
+                <!--  <div class="social">
+                              <a href=""><i class="bi bi-instagram"></i></a>
+                              <a href=""><i class="bi bi-linkedin"></i></a>
+                            </div> -->
+              </div>
+            </div>
+          </div>
+
+        </div>
 
 
       </div>
@@ -457,6 +489,7 @@
           <p>Contact Us</p>
         </div>
 
+        
         <div class="row">
 
           <div class="col-lg-4" data-aos="fade-right" data-aos-delay="100">
