Added new community partners

--- a/team.html
+++ b/team.html
@@ -342,7 +342,7 @@
               <div class="pic"><img src="assets/img/team/Juliane Alves.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Julianne Alves</h4>
-                <span>Quality Assurance team member</span>
+                <span>Quality Assurance Team Member</span>
                 <!--  <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
@@ -356,7 +356,7 @@
               <div class="pic"><img src="assets/img/team/Suneet Mahal.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Suneet Mahal</h4>
-                <span>Quality Assurance team member</span>
+                <span>Quality Assurance Team Member</span>
                 <!--  <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
@@ -370,7 +370,7 @@
               <div class="pic"><img src="assets/img/team/Grace Qiu.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Grace Qiu</h4>
-                <span>Quality Assurance team member</span>
+                <span>Quality Assurance Team Member</span>
                 <!--  <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
@@ -386,7 +386,7 @@
               </div>
               <div class="member-info">
                 <h4>Devanga Dassnayake</h4>
-                <span>Pairing team member</span>
+                <span>Pairing Team Member</span>
                 <!--  <div class="social">
                               <a href=""><i class="bi bi-instagram"></i></a>
                               <a href=""><i class="bi bi-linkedin"></i></a>
