Updated FAQ for all pages

--- a/refugee.html
+++ b/refugee.html
@@ -241,8 +241,23 @@
                       class="bx bx-chevron-up icon-close"></i></a>
                   <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
                     <p>
-                      Please check your spam inbox! Our emails sometimes wind up in there. If you're still
-                      having problems, feel free to email us and we'll sort it out!
+                      Please check your spam inbox! Our emails sometimes wind up in there. If you still haven’t heard from us, 
+                      that may be because we don’t have anyone available for you at the moment. If you are in urgent need for 
+                      a tutor, please send us an email and we will do our best to pair you ASAP.
+                    </p>
+                  </div>
+                </li>
+
+                <li data-aos="fade-up" data-aos-delay="500">
+                  <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-6"
+                    class="collapsed">I’m an adult looking to volunteer, can I register?
+                    <i class="bx bx-chevron-down icon-show"></i><i
+                      class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="faq-list-6" class="collapse" data-bs-parent=".faq-list">
+                    <p>
+                      Thank you for your interest in volunteering! 
+                      If you are in University, then you absolutely can so long as you provide a valid vulnerable sector police check. 
+                      If you are an adult out of school, a check must still be provided and you will most likely be paired with an adult student.
                     </p>
                   </div>
                 </li>
