--- a/refugee.html
+++ b/refugee.html
@@ -70,7 +70,7 @@
         <li><a href="index.html#events">Events</a></li>
         <li class="dropdown"><a href="index.html#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
-            <li><a href="index.html#team">Our Team</a></li>
+            <li><a href="team.html">Our Team</a></li>
             <li><a href="index.html#donors">Our Partners</a></li>
             <li><a href="index.html#news">Our Features</a></li>
           </ul>
