--- a/team.html
+++ b/team.html
@@ -223,7 +223,7 @@
               </div>
               <div class="member-info">
                 <h4>Leah Cai</h4>
-                <span>Students and Pairing Director</span>
+                <span>Vice President and Head of Pairing</span>
                 <!--   <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
