--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Intro to Finance </h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
-                  <img class="rounded-3 img-fluid" src="assets/img/gallery/grandriverhospitaldonation.jpg">
+                  <img class="rounded-3 img-fluid" width="300" src="assets/img/introtofinance.png">
                   <p class="w-75 mt-2" style="font-style: normal;">The intro to Finance lecture, also given to SHAD
                     Canada students last summer, introduced the fundamentals of business and market competition which
                     has been extensively studied in economics and business domains. Through a series of fun examples,
@@ -473,7 +473,7 @@
               </div>
             </div>
 
-            
+
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Back to School with Backpacks Fundraiser</h1>
