--- a/team.html
+++ b/team.html
@@ -261,6 +261,20 @@
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 ">
+            <div class="member" data-aos="zoom-in" data-aos-delay="300">
+              <div class="pic"><img src="assets/img/team/feng.png" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Feng Zhang</h4>
+                <span>Website Manager</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 ">
             <div class="member" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic"><img src="assets/img/team/fiona.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
