update about us & our mission & counts

--- a/index.html
+++ b/index.html
@@ -159,18 +159,19 @@
 
             <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column py-5 px-lg-5" data-aos="fade-left">
               <h3>About Us</h3>
-              <p>HomeworkHub is a youth-led, non-profit organization dedicated to providing free, accessible, and
-                quality educational resources to all students in need in order to guide them to academic success.
-                Over the past months, the HomeworkHub community has grown to over <strong>1800</strong> members across
-                the world including
-                tutors and students from Canada, the US, China, Kenya, India, Philippines, and Indonesia!
+              <p>HomeworkHub is a youth-led, non-profit organization dedicated to providing free, accessible, 
+                and quality educational resources to all students and families in need. Over the past year, 
+                the HomeworkHub community has grown to over <strong>2000</strong> members across the world 
+                including tutors and students from Canada, the US, China, Kenya, India, Philippines, and Indonesia!
               </p>
 
               <h3 class='mt-5'>HomeworkHub's Mission...</h3>
-              <p>Through our FREE tutoring program, we provide Elementary school students with the one-on-one
-                academic support they lack and volunteer tutors with necessary community service hours all
-                from the comfort and safety of your own homes! HomeworkHub is dedicated to providing academic
-                assistance to students and their families in need.
+              <p>Through our <strong>FREE tutoring program</strong>, we provide Elementary school students with the one-on-one 
+                academic support they lack in order to lessen the stress of learning. Through our FREE seminars, 
+                workshops, and panels, we provide high school and university students with the information and 
+                guidance they need to achieve their academic goals. Additionally, we provide community service 
+                hours to our volunteer tutors, all from the comfort and safety of your own homes! HomeworkHub is 
+                dedicated to providing academic assistance to all students and their families in need.
               </p>
 
             </div>
@@ -186,7 +187,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
                 <div class="count-box">
                   <i class="bi bi-journal-richtext"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="1163" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="1172" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>Students</p>
                 </div>
@@ -195,7 +196,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                 <div class="count-box">
                   <i class="bi bi-headset"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="803" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="819" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>HomeworkHub Tutors</p>
                 </div>
@@ -204,7 +205,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                 <div class="count-box">
                   <i class="bi bi-people"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="4075" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="4219" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>Hours Tutored</p>
                 </div>
