added ignition hacks to community partners

--- a/index.html
+++ b/index.html
@@ -606,6 +606,18 @@
 
                 <div class="swiper-slide">
                   <div class="testimonial-item">
+                    <a href="https://www.ignitionhacks.org/">
+                      <h3>Ignition Hacks</h3>
+                      <h4>Community Partner</h4>
+                      <img src="assets/img/other/ignition-logo.png"
+                        class="partner_img">
+                    </a>
+                    
+                  </div>
+                </div><!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-item">
                     <a href="https://redtheone-eyedhorse.org/">
                       <h3>Red the One-Eyed Horse</h3>
                       <h4>Community Partner</h4>
