--- a/refugee.html
+++ b/refugee.html
@@ -149,8 +149,8 @@
           <!-- <div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center align-items-stretch" data-aos="fade-right">
             <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div> -->
-          <div class="d-flex flex-row align-items-center flex-wrap" style="margin-left: 20px;">
-            <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column py-5 px-lg-5" data-aos="fade-left">
+          <div class="d-flex flex-row align-items-center flex-wrap" style="margin: 20px;">
+            <div class="col-8 col-lg-8 icon-boxes d-flex flex-column py-5 px-lg-5" data-aos="fade-left">
               <h3>Dear refugees and people currently in need, </h3>
               <p>We understand that change is not easy. Entering a new country, surrounded by unknown languages, people,
                 and culture poses a significant challenge to families struggling to adapt to their new environment.
@@ -241,8 +241,10 @@
                       class="bx bx-chevron-up icon-close"></i></a>
                   <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
                     <p>
-                      Please check your spam inbox! Our emails sometimes wind up in there. If you still haven’t heard from us, 
-                      that may be because we don’t have anyone available for you at the moment. If you are in urgent need for 
+                      Please check your spam inbox! Our emails sometimes wind up in there. If you still haven’t heard
+                      from us,
+                      that may be because we don’t have anyone available for you at the moment. If you are in urgent
+                      need for
                       a tutor, please send us an email and we will do our best to pair you ASAP.
                     </p>
                   </div>
@@ -251,13 +253,14 @@
                 <li data-aos="fade-up" data-aos-delay="500">
                   <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-6"
                     class="collapsed">I’m an adult looking to volunteer, can I register?
-                    <i class="bx bx-chevron-down icon-show"></i><i
-                      class="bx bx-chevron-up icon-close"></i></a>
+                    <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="faq-list-6" class="collapse" data-bs-parent=".faq-list">
                     <p>
-                      Thank you for your interest in volunteering! 
-                      If you are in University, then you absolutely can so long as you provide a valid vulnerable sector police check. 
-                      If you are an adult out of school, a check must still be provided and you will most likely be paired with an adult student.
+                      Thank you for your interest in volunteering!
+                      If you are in University, then you absolutely can so long as you provide a valid vulnerable sector
+                      police check.
+                      If you are an adult out of school, a check must still be provided and you will most likely be
+                      paired with an adult student.
                     </p>
                   </div>
                 </li>
