--- a/team.html
+++ b/team.html
@@ -175,7 +175,7 @@
               <div class="pic"><img src="assets/img/team/pheobe.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Phoebe Luo</h4>
-                <span>Co-President</span>
+                <span>Gone</span>
                 <!--  <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
@@ -189,7 +189,7 @@
               <div class="pic"><img src="assets/img/team/sammi.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Sammi Wang</h4>
-                <span>Co-Vice President and Treasurer</span>
+                <span>Fiance and Accounting Director</span>
                 <!--  <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
@@ -223,7 +223,7 @@
               </div>
               <div class="member-info">
                 <h4>Leah Cai</h4>
-                <span>Vice President and Head of Pairing</span>
+                <span>Vice President</span>
                 <!--   <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
@@ -279,7 +279,7 @@
               <div class="pic"><img src="assets/img/team/fiona.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Fiona MacDougall</h4>
-                <span>Quality Assurance Director</span>
+                <span>Vice President</span>
                 <!-- <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
