--- a/team.html
+++ b/team.html
@@ -71,7 +71,7 @@
         <li><a href="index.html#events">Events</a></li>
         <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
-            <li><a href="index.html#team">Our Team</a></li>
+            <li><a href="team.html">Our Team</a></li>
             <li><a href="index.html#donors">Our Partners</a></li>
             <li><a href="index.html#news">Our Features</a></li>
           </ul>
@@ -170,54 +170,20 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+          <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/pheobe.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/fiona.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Phoebe Luo</h4>
-                <span>Gone</span>
-                <!--  <div class="social">
+                <h4>Fiona MacDougall</h4>
+                <span>Vice President</span>
+                <!-- <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div> -->
               </div>
             </div>
           </div>
-
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-            <div class="member" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/sammi.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Sammi Wang</h4>
-                <span>Fiance and Accounting Director</span>
-                <!--  <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-              </div>
-            </div>
-          </div>
-
-
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-            <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/tina.png" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Tahmina Faez</h4>
-                <span>Volunteers and Tutors Director</span>
-                <!--  <div class="social">
-                              <a href=""><i class="bi bi-instagram"></i></a>
-                              <a href=""><i class="bi bi-linkedin"></i></a>
-                            </div> -->
-              </div>
-            </div>
-          </div>
-
-        </div>
-        <div class="row" data-aos="fade-left">
-
-          <div class="col-lg-3 col-md-6 mt-5 ">
+          <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="400">
               <div class="pic"><img src="assets/img/team/leah.jpg" class="img-fluid" alt="">
               </div>
@@ -232,7 +198,155 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-5 ">
+          <div class="col-lg-3 col-md-6">
+            <div class="member" data-aos="zoom-in" data-aos-delay="300">
+              <div class="pic"><img src="assets/img/team/sammi.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Sammi Wang</h4>
+                <span>Fiance and Accounting Director</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic"><img src="assets/img/team/Juliane Alves.jpeg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Julianne Alves</h4>
+                <span>Quality Assurance Director</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="member" data-aos="zoom-in" data-aos-delay="300">
+              <div class="pic"><img src="assets/img/team/Grace Qiu.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Grace Qiu</h4>
+                <span>Quality Assurance Team Member</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="member" data-aos="zoom-in" data-aos-delay="300">
+              <div class="pic"><img src="assets/img/team/Neha.jpeg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Neha</h4>
+                <span>Quality Assurance Manager</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic"><img src="assets/img/team/Gurman.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Gurman Sahota</h4>
+                <span>Volunteers Director</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic"><img src="assets/img/team/Kaniesa.png" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Kaniesa</h4>
+                <span>Volunteers Manager</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic"><img src="assets/img/team/Diya.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Diya</h4>
+                <span>Volunteers Manager</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic"><img src="assets/img/team/Anne.JPG" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Anne Zhang</h4>
+                <span>Students and Pairing Director</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic"><img src="assets/img/team/Devanga Dassnayake.JPG" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Devanga Dassnayake</h4>
+                <span>Students and Pairing Director</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="member" data-aos="zoom-in" data-aos-delay="300">
+              <div class="pic"><img src="assets/img/team/mychau.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>MyChau Tight</h4>
+                <span>Students and Pairing Manager</span>
+                <!--          <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="member" data-aos="zoom-in" data-aos-delay="300">
+              <div class="pic"><img src="assets/img/team/Mathusha.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Mathusha</h4>
+                <span>Students and Pairing Manager</span>
+                <!--          <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6  ">
             <div class="member" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic"><img src="assets/img/team/me.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
@@ -246,7 +360,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-5 ">
+          <div class="col-lg-3 col-md-6 ">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic"><img src="assets/img/team/andrew.JPG" class="img-fluid" alt=""></div>
               <div class="member-info">
@@ -260,7 +374,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-5 ">
+          <div class="col-lg-3 col-md-6 ">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic"><img src="assets/img/team/feng.png" class="img-fluid" alt=""></div>
               <div class="member-info">
@@ -273,140 +387,8 @@
               </div>
             </div>
           </div>
-
-          <div class="col-lg-3 col-md-6 mt-5 ">
-            <div class="member" data-aos="zoom-in" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/fiona.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Fiona MacDougall</h4>
-                <span>Vice President</span>
-                <!-- <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mt-5">
-            <div class="member" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/mychau.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>MyChau Tight</h4>
-                <span>Students and Pairing Manager</span>
-                <!--          <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mt-5">
-            <div class="member" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="assets/img/team/angela.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Angela Zielke-Stray</h4>
-                <span>Marketing Manager</span>
-                <!--  <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-              </div>
-            </div>
-          </div>
-
-
-          <div class="col-lg-3 col-md-6 mt-5">
-            <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/Gurman.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Gurman Sahota</h4>
-                <span>Volunteers and Interview Team Member </span>
-                <!--  <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mt-5">
-            <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/Anne.JPG" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Anne Zhang</h4>
-                <span>Pairing Team Member</span>
-                <!--  <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-              </div>
-            </div>
-          </div>
-
-
-          <div class="col-lg-3 col-md-6 mt-5">
-            <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/Juliane Alves.jpeg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Julianne Alves</h4>
-                <span>Quality Assurance Team Member</span>
-                <!--  <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mt-5">
-            <div class="member" data-aos="zoom-in" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/Suneet Mahal.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Suneet Mahal</h4>
-                <span>Quality Assurance Team Member</span>
-                <!--  <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mt-5">
-            <div class="member" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/Grace Qiu.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Grace Qiu</h4>
-                <span>Quality Assurance Team Member</span>
-                <!--  <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-              </div>
-            </div>
-          </div>
-
-
-          <div class="col-lg-3 col-md-6 mt-5">
-            <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/Devanga Dassnayake.JPG" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Devanga Dassnayake</h4>
-                <span>Pairing Team Member</span>
-                <!--  <div class="social">
-                              <a href=""><i class="bi bi-instagram"></i></a>
-                              <a href=""><i class="bi bi-linkedin"></i></a>
-                            </div> -->
-              </div>
-            </div>
-          </div>
-
         </div>
+
       </div>
     </section><!-- End Team Section -->
 
@@ -477,9 +459,11 @@
                   class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Please check your spam inbox! Our emails sometimes wind up in there. 
-                  If you still haven’t heard from us, that may be because we don’t have anyone available for you at the moment. 
-                  If you are in urgent need for a tutor, please send us an email and we will do our best to pair you ASAP.
+                  Please check your spam inbox! Our emails sometimes wind up in there.
+                  If you still haven’t heard from us, that may be because we don’t have anyone available for you at the
+                  moment.
+                  If you are in urgent need for a tutor, please send us an email and we will do our best to pair you
+                  ASAP.
                 </p>
               </div>
             </li>
@@ -487,13 +471,14 @@
             <li data-aos="fade-up" data-aos-delay="500">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-6"
                 class="collapsed">I’m an adult looking to volunteer, can I register?
-                <i class="bx bx-chevron-down icon-show"></i><i
-                  class="bx bx-chevron-up icon-close"></i></a>
+                <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-6" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Thank you for your interest in volunteering! 
-                  If you are in University, then you absolutely can so long as you provide a valid vulnerable sector police check. 
-                  If you are an adult out of school, a check must still be provided and you will most likely be paired with an adult student.
+                  Thank you for your interest in volunteering!
+                  If you are in University, then you absolutely can so long as you provide a valid vulnerable sector
+                  police check.
+                  If you are an adult out of school, a check must still be provided and you will most likely be paired
+                  with an adult student.
                 </p>
               </div>
             </li>
@@ -513,7 +498,7 @@
           <p>Contact Us</p>
         </div>
 
-        
+
         <div class="row">
 
           <div class="col-lg-4" data-aos="fade-right" data-aos-delay="100">
